Updates goodbye message translation
Replaces the "Time for a beer! Goodbye!" message with a more appropriate "See you next time!" translation across multiple languages, providing a better user experience.

--- a/SourceCode/AgOpenGPS.Core/Translations/gStr.da.resx
+++ b/SourceCode/AgOpenGPS.Core/Translations/gStr.da.resx
@@ -735,7 +735,7 @@ Rækkefølgen du klikker på dem, angiver placeringen nedefra og op.</value>
     <value>Gem og vend tilbage</value>
   </data>
   <data name="gsSaveBeerTime" xml:space="preserve">
-    <value>Tid til en øl! Farvel!</value>
+    <value>Vi ses næste gang!</value>
   </data>
   <data name="gsSaveField" xml:space="preserve">
     <value>Gemmer felt..</value>
