--- a/SourceCode/AgOpenGPS.Core/Translations/gStr.it.resx
+++ b/SourceCode/AgOpenGPS.Core/Translations/gStr.it.resx
@@ -921,7 +921,7 @@ L'ordina sarà dal basso verso l'alto.</value>
     <value>Salva e torna indietro</value>
   </data>
   <data name="gsSaveBeerTime" xml:space="preserve">
-    <value>È ora di una birra! Addio!</value>
+    <value>Ci vediamo la prossima volta!</value>
   </data>
   <data name="gsSaveField" xml:space="preserve">
     <value>Salvataggio campo..</value>
