--- a/SourceCode/AgOpenGPS.Core/Translations/gStr.nl.resx
+++ b/SourceCode/AgOpenGPS.Core/Translations/gStr.nl.resx
@@ -873,7 +873,7 @@ De volgorde waarin u ze indrukt, is de volgorde waarin ze van onder naar boven i
     <value>Opslaan en terugkeren</value>
   </data>
   <data name="gsSaveBeerTime" xml:space="preserve">
-    <value>Tijd voor een biertje! Tot ziens!</value>
+    <value>Tot de volgende keer!</value>
   </data>
   <data name="gsSaveField" xml:space="preserve">
     <value>Veld opslaan..</value>
