--- a/SourceCode/AgOpenGPS.Core/Translations/gStr.pt.resx
+++ b/SourceCode/AgOpenGPS.Core/Translations/gStr.pt.resx
@@ -457,7 +457,7 @@
     <value>Salvar e retornar</value>
   </data>
   <data name="gsSaveBeerTime" xml:space="preserve">
-    <value>Hora de uma cerveja! Tchau!</value>
+    <value>Até a próxima!</value>
   </data>
   <data name="gsSaveField" xml:space="preserve">
     <value>Salvando campo..</value>
