--- a/SourceCode/AgOpenGPS.Core/Translations/gStr.hu.resx
+++ b/SourceCode/AgOpenGPS.Core/Translations/gStr.hu.resx
@@ -59,7 +59,7 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root">
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
@@ -156,6 +156,9 @@
   <data name="gsAgressiveness" xml:space="preserve">
     <value>Érzékenység</value>
   </data>
+  <data name="gsAllSettings" xml:space="preserve">
+    <value>Összes beállítás megtekintése</value>
+  </data>
   <data name="gsAlpha" xml:space="preserve">
     <value>Átlátszóság</value>
   </data>
@@ -205,6 +208,12 @@ A választott sorrend alapján fognak megjelenni alulról felfelé.</value>
   </data>
   <data name="gsAutoSteerPort" xml:space="preserve">
     <value>Automata kormányzás portja</value>
+  </data>
+  <data name="gsAutoSwitchDualFix" xml:space="preserve">
+    <value>Auto Duál &lt;&gt; Fix</value>
+  </data>
+  <data name="gsAutoSwitchDualFixSpeed" xml:space="preserve">
+    <value>Váltási sebesség</value>
   </data>
   <data name="gsBackground" xml:space="preserve">
     <value>Háttér</value>
@@ -771,6 +780,9 @@ A választott sorrend alapján fognak megjelenni alulról felfelé.</value>
   <data name="gsOn" xml:space="preserve">
     <value>Be</value>
   </data>
+  <data name="gsOnDelay" xml:space="preserve">
+    <value>Be késleltetés</value>
+  </data>
   <data name="gsOnOff" xml:space="preserve">
     <value>Be/Ki</value>
   </data>
@@ -1236,17 +1248,5 @@ HASZNÁLAT SAJÁT FELELŐSSÉGRE.</value>
   </data>
   <data name="v_AboutIntro" xml:space="preserve">
     <value>https://www.youtube.com/watch?v=iN2cZ8avHag</value>
-  </data>
-  <data name="gsAllSettings" xml:space="preserve">
-    <value>Összes beállítás megtekintése</value>
-  </data>
-  <data name="gsAutoSwitchDualFix" xml:space="preserve">
-    <value>Auto Duál &lt;&gt; Fix</value>
-  </data>
-  <data name="gsAutoSwitchDualFixSpeed" xml:space="preserve">
-    <value>Váltási sebesség (km/h)</value>
-  </data>
-  <data name="gsOnDelay" xml:space="preserve">
-    <value>Be késleltetés</value>
   </data>
 </root>
