--- a/SourceCode/AgOpenGPS.Core/Translations/gStr.lv.resx
+++ b/SourceCode/AgOpenGPS.Core/Translations/gStr.lv.resx
@@ -59,7 +59,7 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root">
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
@@ -208,7 +208,7 @@
     <value>Auto Dual &lt;&gt; Fix</value>
   </data>
   <data name="gsAutoSwitchDualFixSpeed" xml:space="preserve">
-    <value>Pārslēgšanās ātrums (km/h)</value>
+    <value>Pārslēgšanās ātrums</value>
   </data>
   <data name="gsBackground" xml:space="preserve">
     <value>Fons</value>
