--- a/SourceCode/AgOpenGPS.Core/Translations/gStr.nl.resx
+++ b/SourceCode/AgOpenGPS.Core/Translations/gStr.nl.resx
@@ -480,7 +480,7 @@ De volgorde waarin u ze indrukt, is de volgorde waarin ze van onder naar boven i
     <value>Tijdelijk</value>
   </data>
   <data name="gsFormFlag" xml:space="preserve">
-    <value>Vlaggen</value>
+    <value> </value>
   </data>
   <data name="gsFromExisting" xml:space="preserve">
     <value>Vanuit bestaand</value>
@@ -1138,5 +1138,21 @@ GEBRUIK OP EIGEN RISICO.</value>
   </data>
   <data name="gsZeroRoll" xml:space="preserve">
     <value>Calibreer Gyroscoop</value>
+  </data>
+  <data name="gsForceOverwrite" xml:space="preserve">
+    <value>Overschrijf</value>
+  </data>
+  <data name="gsDownloadAll" xml:space="preserve">
+    <value>Download Alles</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="gsGetSelected" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="gsDownloading" xml:space="preserve">
+    <value>Ophalen...Even wachten</value>
+  </data>
+  <data name="gsAgShareDownloader" xml:space="preserve">
+    <value>Download velden vanaf AgShare</value>
   </data>
 </root>
