--- a/SourceCode/AgOpenGPS.Core/Translations/gStr.no.resx
+++ b/SourceCode/AgOpenGPS.Core/Translations/gStr.no.resx
@@ -1218,4 +1218,20 @@ BRUK PÅ EGEN RISIKO.</value>
   <data name="gsZoomIn" xml:space="preserve">
     <value>Zoom inn</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="gsForceOverwrite" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="gsDownloadAll" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="gsGetSelected" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="gsDownloading" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="gsAgShareDownloader" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
 </root>
